# stereocam

./: CMakeLists.txt  LICENSE  README.md  calibparams.cpp  calibparams.h  calibparams.ui  calibparamsdialog.cpp  calibparamsdialog.h  calibparamsdialog.ui  camera.cpp  camera.h  cameraparametersdialog.cpp  cameraparametersdialog.h  cameraparametersdialog.ui  cameraparametersmodel.cpp  cameraparametersmodel.h  camerasetupdialog.cpp  camerasetupdialog.h  camerasetupdialog.ui  camerautils.cpp  camerautils.h  depthmapbuilder.cpp  depthmapbuilder.h  dmapsettingsmodel.cpp  dmapsettingsmodel.h  frameprocessor.cpp  frameprocessor.h  framesource.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qframeconverter.cpp  qframeconverter.h  utils.cpp  utils.h  v4lcamera.cpp  v4lcamera.h
calibration_1280_720/: stereo-calib-data-20160215-225457577.yml  stereo-calib-data-20160222-195546729.yml
calibration_1280_720/cam_0/: calib-data-20160214-130644463.yml
calibration_1280_720/cam_1/: calib-data-20160214-130756214.yml
cufilter/: CMakeLists.txt  cu_device.cu  cu_device.h  cu_median.cu  cu_median.h  cu_utils.h
